Added new bind MyHeat (device version)
