# providers/myheat/device/models/sensor.go
@@ -1,0 +1,62 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// Sensor sensor
+//
+// swagger:model Sensor
+type Sensor struct {
+
+	// hw Id
+	HwID string `json:"hwId,omitempty"`
+
+	// id
+	ID int64 `json:"id,omitempty"`
+
+	// name
+	Name string `json:"name,omitempty"`
+
+	// type
+	Type int64 `json:"type,omitempty"`
+
+	// value
+	Value float64 `json:"value,omitempty"`
+}
+
+// Validate validates this sensor
+func (m *Sensor) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this sensor based on context it is used
+func (m *Sensor) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Sensor) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Sensor) UnmarshalBinary(b []byte) error {
+	var res Sensor
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
