# providers/myheat/device/swagger.yml
@@ -227,58 +227,60 @@ definitions:
   Sensors:
     type: "array"
     items:
-      type: "object"
-      properties:
-        hwId:
-          type: "string"
-        id:
-          type: "integer"
-        name:
-          type: "string"
-        type:
-          type: "integer"
-          # Зональное управление Environment 101 <= e && e <= 199
-          #   101 - Температура помещения
-          #   102 - Контур отопления
-          #   103 - Контур ГВС
-          #   105 - Сауна
-          #   106 - Бассейн
-          #   107 - Теплый пол
-          #   108 - Смесительный узел
-          #   109 - Влажность помещения
-          #   110 - Уличная температура
-          #   112 - Произвольная температура
-          #   114 - Вентиляция
-          #   115 - Прямой контур
-          # Инженерное оборудование Engineering 302 === e || 305 <= e && e <= 330 --- исполнительные механизмы (D Output)
-          #   302 - Насос
-          #   303 - Котел
-          #   305 - Клапан 2-ходовой
-          #   306 - Произвольный механизм
-          #   307 - Печь
-          #   308 - Клапан 3-ходовой
-          #   309 - Клапан 4-ходовой
-          #   310 - Сирена
-          #   311 - Кран перекрытия воды
-          # Сигнализация Alarm 901 <= e && e <= 999
-          #   901 - Протечка воды
-          #   902 - Пожарная тревога
-          #   903 - Охранная тревога
-          #   904 - Утечка газа (метан)
-          #   905 - Концентрация CO
-          #   906 - Произвольная тревога
-          # Датчики 201 <= e && e <= 299
-          #   201 - Проводной датчик температуры
-          #   205 - Дискретный вход
-          # isObjDiscreteSensor 204 === e || 205 === e || 207 === e || 210 === e || 211 === e || 212 === e || 213 == e
-          #   204 -
-          #   205 - Дискретный вход
-          #   207 -
-          #   210 -
-          #   211 -
-          #   212 -
-          #   213 -
-          # Котлы Heater 303 == e
-        value:
-          type: "number"
-          format: "float64"
+      $ref: "#/definitions/Sensor"
+  Sensor:
+    type: "object"
+    properties:
+      hwId:
+        type: "string"
+      id:
+        type: "integer"
+      name:
+        type: "string"
+      type:
+        type: "integer"
+        # Зональное управление Environment 101 <= e && e <= 199
+        #   101 - Температура помещения
+        #   102 - Контур отопления
+        #   103 - Контур ГВС
+        #   105 - Сауна
+        #   106 - Бассейн
+        #   107 - Теплый пол
+        #   108 - Смесительный узел
+        #   109 - Влажность помещения
+        #   110 - Уличная температура
+        #   112 - Произвольная температура
+        #   114 - Вентиляция
+        #   115 - Прямой контур
+        # Инженерное оборудование Engineering 302 === e || 305 <= e && e <= 330 --- исполнительные механизмы (D Output)
+        #   302 - Насос
+        #   303 - Котел
+        #   305 - Клапан 2-ходовой
+        #   306 - Произвольный механизм
+        #   307 - Печь
+        #   308 - Клапан 3-ходовой
+        #   309 - Клапан 4-ходовой
+        #   310 - Сирена
+        #   311 - Кран перекрытия воды
+        # Сигнализация Alarm 901 <= e && e <= 999
+        #   901 - Протечка воды
+        #   902 - Пожарная тревога
+        #   903 - Охранная тревога
+        #   904 - Утечка газа (метан)
+        #   905 - Концентрация CO
+        #   906 - Произвольная тревога
+        # Датчики 201 <= e && e <= 299
+        #   201 - Проводной датчик температуры
+        #   205 - Дискретный вход
+        # isObjDiscreteSensor 204 === e || 205 === e || 207 === e || 210 === e || 211 === e || 212 === e || 213 == e
+        #   204 -
+        #   205 - Дискретный вход
+        #   207 -
+        #   210 -
+        #   211 -
+        #   212 -
+        #   213 -
+        # Котлы Heater 303 == e
+      value:
+        type: "number"
+        format: "float64"
